Zapomněl jsem tečku 💀

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <button id="mainScreenButtonShop">Back</button>
         <div id="skinSeclection">
             <div id="skin1Selection">
-                <img src="/res/img/skins/skin1/SnakeWhole1.png" alt="nefunguje Obrázek">
+                <img src="./res/img/skins/skin1/SnakeWhole1.png" alt="nefunguje Obrázek">
                 <p>FREE</p>
                 <button id="skin1button">Equip</button>
             </div>
             <div id="skin2Selection">
-                <img src="/res/img/skins/skin2/SnakeWhole2.png" alt="nefunguje Obrázek">
+                <img src="./res/img/skins/skin2/SnakeWhole2.png" alt="nefunguje Obrázek">
                 <p>20 Score</p>
                 <button id="skin2button">BUY</button>
             </div>
